--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
