--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.16",
     "tslib": "^2.0.0",
